tests/errors/ReadUndeclaredArray.imp
VAR
  a
BEGIN
  READ b[42];
END
